# whiskers

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_four_way.py
python/whiskers/: auth.py  connection.py  cursor.py  db_connection.py  ddbc_bindings.py  exceptions.py  helpers.py  logging_config.py  pooling.py  row.py
src/: connection.rs  cursor.rs  errors.rs  lib.rs  row_writer.rs  runtime.rs  types.rs
tests/: conftest.py  test_000_dependencies.py  test_001_globals.py  test_002_types.py  test_003_connection.py  test_004_cursor.py  test_005_connection_cursor_lifecycle.py  test_006_exceptions.py  test_007_logging.py  test_008_auth.py  test_009_pooling.py
