[package]
name = "whiskers_native"
version = "0.1.0"
edition = "2024"

[lib]
name = "whiskers_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tabby = { git = "https://github.com/copycatdb/tabby.git", branch = "main", default-features = false, features = ["rustls", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-rustls = "0.26"
rustls = "0.23"
once_cell = "1"
rust_decimal = "1"
chrono = "0.4"
uuid = "1"
futures-util = "0.3"
