[package]
name = "whiskers_native"
version = "0.1.0"
edition = "2024"

[lib]
name = "whiskers_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tabby = { git = "https://github.com/copycatdb/tabby.git", branch = "main", default-features = false, features = ["rustls", "chrono", "rust_decimal", "sync"] }
rust_decimal = "1"
chrono = "0.4"
uuid = "1"
