[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "copycatdb-whiskers"
version = "0.1.0"
description = "PEP 249 DB-API 2.0 driver for SQL Server using tabby TDS protocol"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.maturin]
python-source = "python"
module-name = "whiskers.whiskers_native"
features = ["pyo3/extension-module"]
